; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwspinlock/extr_hwspinlock_core.c_devm_hwspin_lock_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwspinlock/extr_hwspinlock_core.c_devm_hwspin_lock_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.hwspinlock = type { i32 }

@devm_hwspin_lock_release = common dso_local global i32 0, align 4
@devm_hwspin_lock_match = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @devm_hwspin_lock_free(%struct.device* %0, %struct.hwspinlock* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.hwspinlock*, align 8
  %5 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %3, align 8
  store %struct.hwspinlock* %1, %struct.hwspinlock** %4, align 8
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = load i32, i32* @devm_hwspin_lock_release, align 4
  %8 = load i32, i32* @devm_hwspin_lock_match, align 4
  %9 = load %struct.hwspinlock*, %struct.hwspinlock** %4, align 8
  %10 = call i32 @devres_release(%struct.device* %6, i32 %7, i32 %8, %struct.hwspinlock* %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @WARN_ON(i32 %11)
  %13 = load i32, i32* %5, align 4
  ret i32 %13
}

declare dso_local i32 @devres_release(%struct.device*, i32, i32, %struct.hwspinlock*) #1

declare dso_local i32 @WARN_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
